added jak roberto

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <body>
         <p>
-            I am Czarina Patrice L. Roque and welcome to CS3!
+            I am Czarina Patrice L. Roque and I'm hungry
         </p>
+        <img src "jak-roberto.jpg">
     </body>
 </html>
