--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <p>
             I am Czarina Patrice L. Roque and I'm hungry
         </p>
-        <img src "jak-roberto.jpg">
+        <img src="jak-roberto.jpg">
     </body>
 </html>
