--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <body>
         <p>
-            I am Czarina Patrice L. Roque and I'm hungry
+            I am Czarina Patrice L. Roque ug gigutom ko
         </p>
         <img src="jak-roberto.jpg">
     </body>
