--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <body>
+    <body style="background-color:dimgray;">
         <p>
             I am Czarina Patrice L. Roque ug gigutom ko
         </p>
